updated property-panel-ux connector description and appended to root readme

--- a/property-panel-ux/package.json
+++ b/property-panel-ux/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "property-panel-ux",
 	"version": "1.0.0",
-	"description": "An example connector showing how to use UI features in the property panel, including: field titles, descriptions (aka tooltips), default values, advanced properties and oneOf (aka dropdowns) field types.",
+	"description": "An example connector showing how to use UI features in the property panel, including: field titles, descriptions (i.e. tooltips), default values, advanced properties, enums (i.e. static dropdowns) and oneOf (i.e. dropdowns).",
 	"engines": {
 		"node": ">=18.x"
 	},
