--- a/property-panel-ux/tsconfig.json
+++ b/property-panel-ux/tsconfig.json
@@ -9,6 +9,8 @@
 		"strictNullChecks": true,
 		"noImplicitThis": true,
 		"useUnknownInCatchVariables": true,
+		"moduleResolution": "Node16",
+		"module": "Node16",
 		"skipLibCheck": true,
 		"rootDir": "./src",
 		"outDir": "./dist"
