[CN-2334] create example connector for sample repo (#13)
* set up connector structure for global config example

* add example using global config

* update globalConfigExample to new version

* update connectors json|

* update multipart-filehandling

* update property-panel-ux to global config/rawhttp

* update TMDB example to global connector/rawhttp

* update ddl

* add inputs/outputs in composite example and fix a minor error in test.ctx.json

* delete cdk academy badge connector

---------

Co-authored-by: Gnyani <gnyani@tray.io>

--- a/globalconfig-example/package.json
+++ b/globalconfig-example/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "cdk-academy-badge",
+	"name": "globalconfig-example",
 	"version": "1.0.0",
-	"description": "CdkAcademyBadge",
+	"description": "Global Config Example",
 	"engines": {
 		"node": ">=18.x"
 	},
@@ -20,8 +20,9 @@
 		"/dist"
 	],
 	"dependencies": {
-		"@trayio/cdk-dsl": "*",
-		"@trayio/cdk-runtime": "*"
+		"@trayio/cdk-dsl": "3.9.0",
+		"@trayio/cdk-runtime": "3.9.0",
+		"lodash": "^4.17.21"
 	},
 	"devDependencies": {
 		"@types/jest": "28.1.3",
